k8s/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      component: consumer
  template:
    metadata:
      labels:
        app: my-app
        component: consumer
    spec:
      containers:
      - name: consumer
        image: chaitraboggaram/k8s-key-value-store:consumer
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
