k8s/consumer-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: consumer
        image: chaitraboggaram/k8s-key-value-store:consumer
      ports:
      - containerPort: 8001
