k8s/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      component: producer
  template:
    metadata:
      labels:
        app: my-app
        component: producer
    spec:
      containers:
      - name: producer
        image: chaitraboggaram/k8s-key-value-store:producer
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
