k8s/redis-primary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-primary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: redis
        image: chaitraboggaram/k8s-key-value-store-redis:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
