k8s/redis-secondary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-secondary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: redis
        image: chaitraboggaram/k8s-key-value-store-redis:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        command:
        - "redis-server"
        - "--slaveof"
        - "redis-primary-service"
        - "6379"
