k8s/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  selector:
    app: my-app
    component: producer
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
