k8s/producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  selector:
    app: my-app
    component: producer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
