k8s/redis-secondary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-secondary-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
